Added locations.html page, changed default font to Lato

--- a/locations.html
+++ b/locations.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <title>Nashville Software School</title>
+    <link rel="stylesheet" href="./styles/main.css">
+
 </head>
+
 <body>
     <header>
         <nav class="navigation">
@@ -14,17 +17,29 @@
     </header>
 
     <main class="container">
-        <article class="quotes">
-            <section class="quote"></section>
-            <section class="quote"></section>
-            <section class="quote"></section>
+        <article class="tipList bordered">
+            <section class="tip">
+                Location 1
+            </section>
+            <section class="tip">
+                Location 2
+            </section>
+            <section class="tip">
+                Location 3
+            </section>
         </article>
-        <article class="locations">
-            <section class="location"></section>
-            <section class="location"></section>
-            <section class="location"></section>
-        </article>
+        <!--<aside class="tipList bordered">
+            <header>
+                <h3>Martin's Tips</h3>
+            </header>
+            <section class="tip">Make sure tank has water</section>
+            <section class="tip">Clean the poop out on a regular basis</section>
+            <section class="tip">Make sure to feed them daily</section>
+        </aside>-->
     </main>
-    
+
+
+    <script type="module" src="./scripts/main.js"></script>
 </body>
+
 </html>
