Added new Permanent Marker font, added a white background to the fish

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <main class="container">
-        <article class="fishList bordered">
+        <article class="fishList">
             <section class="fish">
                 <div>
                     <img class="fish__image"
@@ -217,9 +217,9 @@
             </section>
             
         </article>
-        <aside class="tipList bordered">
+        <aside class="tipList">
             <header>
-                <h3>Martin's Tips</h3>
+                <h3 class="tipTitle">Martin's Tips!</h3>
             </header>
             <section class="tip">Make sure tank has water</section>
             <section class="tip">Clean the poop out on a regular basis</section>
