--- a/index.html
+++ b/index.html
@@ -221,9 +221,11 @@
             <header>
                 <h3 class="tipTitle">Martin's Tips!</h3>
             </header>
-            <section class="tip">Make sure tank has water</section>
-            <section class="tip">Clean the poop out on a regular basis</section>
-            <section class="tip">Make sure to feed them daily</section>
+            <ul>
+                <li class="tip">Make sure tank has water</li>
+                <li class="tip">Clean the poop out on a regular basis</li>
+                <li class="tip">Make sure to feed them daily</li>
+        </ul>
         </aside>
     </main>
 
