Added logo to navigation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <header>
         <nav class="navigation">
-            <a class="navigation__link" href="index.html">Martin's Aquarium</a>
+            <div class="logo">
+                Martin's Aquarium
+            </div>
+            <a class="navigation__link" href="index.html">Meet the Fish</a>
             <a class="navigation__link" href="locations.html">Harvesting Locations</a>
         </nav>
     </header>
