--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <td>Cumberland River</td>
                         </tr>
                     </table>           
-                    <button class="button--close" id="close-betty">Close Dialog</button>
+                    <button class="button--close" id="close-betty">X</button>
                 </dialog>
             </section>
 
@@ -85,7 +85,7 @@
                             <td>Sumatra</td>
                         </tr>
                     </table>         
-                    <button class="button--close" id="close-goober">Close Dialog</button>
+                    <button class="button--close" id="close-goober">X</button>
                 </dialog>
             </section>
 
@@ -119,7 +119,7 @@
                             <td>South Australia</td>
                         </tr>
                     </table>           
-                    <button class="button--close" id="close-seabiscuit">Close Dialog</button>
+                    <button class="button--close" id="close-seabiscuit">X</button>
                 </dialog>
             </section>
 
@@ -153,7 +153,7 @@
                             <td>Florida Keys</td>
                         </tr>
                     </table>           
-                    <button class="button--close" id="close-frank">Close Dialog</button>
+                    <button class="button--close" id="close-frank">X</button>
                 </dialog>
             </section>
 
@@ -187,7 +187,7 @@
                             <td>Tasmania</td>
                         </tr>
                     </table>         
-                    <button class="button--close" id="close-flarp">Close Dialog</button>
+                    <button class="button--close" id="close-flarp">X</button>
                 </dialog>
             </section>
 
@@ -221,7 +221,7 @@
                             <td>Ryukyu Islands</td>
                         </tr>
                     </table>           
-                    <button class="button--close" id="close-jerry">Close Dialog</button>
+                    <button class="button--close" id="close-jerry">X</button>
                 </dialog>
             </section>
 
@@ -255,7 +255,7 @@
                             <td>Deep Sea</td>
                         </tr>
                     </table>            
-                    <button class="button--close" id="close-nightmare">Close Dialog</button>
+                    <button class="button--close" id="close-nightmare">X</button>
                 </dialog>
             </section>
 
@@ -289,7 +289,7 @@
                             <td>Texas</td>
                         </tr>
                     </table>           
-                    <button class="button--close" id="close-kismet">Close Dialog</button>
+                    <button class="button--close" id="close-kismet">X</button>
                 </dialog>
             </section>
 
@@ -323,7 +323,7 @@
                             <td>Peru</td>
                         </tr>
                     </table>        
-                    <button class="button--close" id="close-sparky">Close Dialog</button>
+                    <button class="button--close" id="close-sparky">X</button>
                 </dialog>
             </section>
             
