tips now come from the TipDataProvider.js and looped and shown as HTML elements on the DOM

--- a/index.html
+++ b/index.html
@@ -20,51 +20,13 @@
     </header>
 
     <main class="container">
-        <article class="fishList">
-            <!--<section class="fish">
-                <div>
-                    <img class="fish__image"
-                        src="./images/betty.jpg"
-                        alt="">
-                </div>
-                <div class="fish__name">Betty</div>
-                <div>
-                    <button id="button--betty">🐟 Details</button>
-                </div>
-            
-                <dialog class="dialog--fish" id="details--betty">
-                    <div class="dialog__fishName">Betty</div>
-                    <table>
-                        <tr>
-                            <td>Length</td>
-                            <td>2 feet</td>
-                        </tr>
-                        <tr>
-                            <td>Species</td>
-                            <td>Longtooth Barracuda</td>
-                        </tr>
-                        <tr>
-                            <td>Diet</td>
-                            <td>Squid</td>
-                        </tr>
-                        <tr>
-                            <td>Location</td>
-                            <td>Cumberland River</td>
-                        </tr>
-                    </table>           
-                    <button class="button--close" id="close-betty">X</button>
-                </dialog>
-            </section>-->            
+        <article class="fishList">    
         </article>
         <aside class="tipList">
             <header>
                 <h3 class="tipTitle">Martin's Tips!</h3>
             </header>
-            <ul>
-                <li class="tip">Make sure tank has water</li>
-                <li class="tip">Clean the poop out on a regular basis</li>
-                <li class="tip">Make sure to feed them daily</li>
-        </ul>
+            <ul class="tips"></ul>
         </aside>
     </main>
 
