--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </main>
 
 
-    <script type="module" src="scripts/main.js"></script>
+    <script type="module" src="scripts/fish/main.js"></script>
 </body>
 
 </html>
