Added location images and added data for LocationDataProvider.js

--- a/locations.html
+++ b/locations.html
@@ -11,35 +11,21 @@
 <body>
     <header>
         <nav class="navigation">
-            <a class="navigation__link" href="index.html">Martin's Aquarium</a>
+            <div class="logo">
+                Martin's Aquarium
+            </div>
+            <a class="navigation__link" href="index.html">Meet the Fish</a>
             <a class="navigation__link" href="locations.html">Harvesting Locations</a>
         </nav>
     </header>
 
     <main class="container">
-        <article class="tipList bordered">
-            <section class="tip">
-                Location 1
-            </section>
-            <section class="tip">
-                Location 2
-            </section>
-            <section class="tip">
-                Location 3
-            </section>
+        <article class="locationsList">    
         </article>
-        <!--<aside class="tipList bordered">
-            <header>
-                <h3>Martin's Tips</h3>
-            </header>
-            <section class="tip">Make sure tank has water</section>
-            <section class="tip">Clean the poop out on a regular basis</section>
-            <section class="tip">Make sure to feed them daily</section>
-        </aside>-->
     </main>
 
 
-    <script type="module" src="./scripts/main.js"></script>
+    <script type="module" src="scripts/locations/main.js"></script>
 </body>
 
 </html>
